Non-functional WiFi Direct code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="post_save">Save</string>
     <string name="post_location">Location</string>
     <string name="post_title">Title</string>
+    <string name="placeholder">placeholder</string>
+    <string name="scan_direct">SCAN</string>
 </resources>
