--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="post_title">Title</string>
     <string name="placeholder">placeholder</string>
     <string name="scan_direct">SCAN</string>
+    <string name="editor_hint">Write your article here…</string>
 </resources>
