--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="scan_progress">Scanning…</string>
+    <string name="no_articles">You have no articles yet!</string>
 </resources>
